# pg-rpc

./: Cargo.toml  NULLABILITY_AUDIT.md  README.md  TESTING.md  create_test_task_types.sql  fix_miniswap_task_types.sql  libtypes.rlib  pgrpc.rs  pgrpc.toml  plan.md  test_is_null.sql  test_task_demo.sql  test_task_introspection.rs  test_task_types.sql  test_view_join.sql
benches/: composite_tosql.rs
examples/: build.rs  pgrpc_with_queries.toml  runtime_usage.rs  usage_in_lib.rs
examples/queries/: authors.sql
schema/01_tables/: 01_account.sql  02_post.sql
schema/02_api/: 01_api.sql
src/: annotations.rs  cardinality_inference.rs  cli.rs  codegen.rs  column_grouping.rs  config.rs  constraint_analysis.rs  db.rs  docstring.rs  domain_index.rs  dummy.rs  dump.rs  error_type_index.rs  exceptions.rs  flatten.rs  fn_index.rs  fn_src_location.rs  ident.rs  infer_types.rs  lib.rs  load_ddl.rs  main.rs  parse_check_enum.rs  parse_check_facts.rs  parse_domain.rs  parse_explicit_exceptions.rs  pg_constraint.rs  pg_fn.rs  pg_id.rs  pg_image.rs  pg_rel.rs  pg_type.rs  pgrpc.rs  pgsql_check.rs  query_index.rs  query_introspector.rs  rel_index.rs  sql_parser.rs  sql_state.rs  task_index.rs  (+7 more)
src/exceptions/: parse_explicit_exceptions.rs
src/queries/: error_type_introspection.sql  function_introspection.sql  relation_introspection.sql  task_introspection.sql  trigger_introspection.sql  type_introspection.sql
src/tests/: mod.rs  t.rs
tests/: integration_tests.rs  postgis_test.sql  test_queries.sql
tests/integration/: array_of_composites_tests.rs  bulk_nullability_minimal_tests.rs  bulk_nullability_tests.rs  check_enum_tests.rs  check_predicate_nullability_tests.rs  codegen_tests.rs  compile_helpers.rs  complex_query_tests.rs  composite_fromsql_tests.rs  custom_error_tests.rs  error_tests.rs  flatten_annotation_tests.rs  flatten_tests.rs  function_flatten_tests.rs  function_out_params_tests.rs  miniswap_view_nullability_tests.rs  mod.rs  out_param_nullability_tests.rs  postgis_tests.rs  prepared_cache_bench.rs  procedure_tests.rs  query_tests.rs  schema_tests.rs  single_field_group_tests.rs  sql_function_tests.rs  strict_domain_tests.rs  task_queue_tests.rs  trigger_tests.rs  view_constraint_test.rs  view_nullability_tests.rs  view_query_nullability_test.rs  workflow_tests.rs
tests/sql/: view_nullability_miniswap.sql
tests/unit/: flatten_generation_tests.rs
