[package]
name = "pgfn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "array-impls", "with-time-0_3", "with-uuid-1"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
pg_query = "6.0.0"
clap = { version = "4.5.26", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
serde_json_path = "0.7.1"
regex = "1.11.1"
testcontainers = { version = "0.23.1" }
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }
heck = "0.5"
prettyplease = "0.2"
itertools = "0.14"
postgres-types = { version = "0.2.8", features = ["derive"] }
serde_with = "3.12.0"
ariadne = { version = "0.5.0", features = ["auto-color"] }
tempfile = { version = "3.15.0" }
time = "0.3.37"
tap = "1.0.1"
clio = { version = "0.3.5", features = ["clap-parse"] }
rayon = "1.10.0"
jsonpath-rust = "0.7.5"
phf = { version = "0.11", features = ["macros"] }
