[package]
name = "pgrpc"
version = "0.1.1"
edition = "2021"

[lib]
name = "pgrpc"
path = "src/lib.rs"

[[bin]]
name = "pgrpc_cli"
path = "src/main.rs"

[features]
null_tracking = []

[dependencies]
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "array-impls", "with-time-0_3", "with-uuid-1"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
pg_query = "6.0.0"
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
regex = "1.11.1"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["parsing"] }
heck = "0.5"
prettyplease = "0.2"
itertools = "0.14"
postgres-types = { version = "0.2.8", features = ["derive"] }
serde_with = "3.12.0"
tempfile = { version = "3.15.0" }
time = { version = "0.3.37", features = ["serde-well-known"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
rayon = "1.10.0"
jsonpath-rust = "0.7.5"
phf = { version = "0.11", features = ["macros"] }
toml = "0.8.19"
smallvec = { version = "2.0.0-alpha.9", features = ["serde"] }
ustr = { version = "1.1.0", features = ["serde"] }
postgres = {  version = "0.19.10", features = ["with-serde_json-1", "array-impls", "with-time-0_3", "with-uuid-1"] }
log = "0.4.25"
env_logger = "0.11"
bon = "2.3"
petgraph = "0.6"
postgis-butmaintained = { version = "0.12.0", features = ["serde"] }
glob = "0.3.3"

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["postgres", "blocking"] }
indoc = "2.0"
tokio-test = "0.4"
serial_test = "3.0"
uuid = { version = "1.0", features = ["v4"] }
